--- a/reports/index.html
+++ b/reports/index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Web Automation Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">May 10, 2025 03:06:59 pm</span></a>
+<a href="#"><span class="badge badge-primary">May 12, 2025 09:14:24 am</span></a>
 </li>
 </ul>
 </div>
@@ -79,9 +79,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">D:\Switch@2025\Eclipse-WS\Format_WS\SeleniumFrameworkDesign\reports\index.html</p>
+            <p class="name">D:\Switch@2025\Eclipse-WS\Format_WS\CICD\SeleniumFrameworkDesign\reports\index.html</p>
             <p class="text-sm">
-              <span>3:07:00 pm</span> / <span>00:00:00:001</span>
+              <span>9:14:25 am</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -89,10 +89,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">D:\Switch@2025\Eclipse-WS\Format_WS\SeleniumFrameworkDesign\reports\index.html</h5>
-<span class='badge badge-success'>05.10.2025 3:07:00 pm</span>
-<span class='badge badge-danger'>05.10.2025 3:07:00 pm</span>
-<span class='badge badge-default'>00:00:00:001</span>
+<h5 class="test-status text-pass">D:\Switch@2025\Eclipse-WS\Format_WS\CICD\SeleniumFrameworkDesign\reports\index.html</h5>
+<span class='badge badge-success'>05.12.2025 9:14:25 am</span>
+<span class='badge badge-danger'>05.12.2025 9:14:25 am</span>
+<span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -108,7 +108,7 @@
           <div class="test-detail">
             <p class="name">LoginErrorMessage</p>
             <p class="text-sm">
-              <span>3:07:11 pm</span> / <span>00:00:01:185</span>
+              <span>9:14:34 am</span> / <span>00:00:00:808</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -117,9 +117,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">LoginErrorMessage</h5>
-<span class='badge badge-success'>05.10.2025 3:07:11 pm</span>
-<span class='badge badge-danger'>05.10.2025 3:07:12 pm</span>
-<span class='badge badge-default'>00:00:01:185</span>
+<span class='badge badge-success'>05.12.2025 9:14:34 am</span>
+<span class='badge badge-danger'>05.12.2025 9:14:35 am</span>
+<span class='badge badge-default'>00:00:00:808</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -132,7 +132,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:07:12 pm</td>
+        <td>9:14:35 am</td>
         <td>
           Test Passed
         </td>
@@ -149,7 +149,7 @@
           <div class="test-detail">
             <p class="name">SubmitOrder</p>
             <p class="text-sm">
-              <span>3:07:13 pm</span> / <span>00:00:18:001</span>
+              <span>9:14:35 am</span> / <span>00:00:16:508</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -158,9 +158,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">SubmitOrder</h5>
-<span class='badge badge-success'>05.10.2025 3:07:13 pm</span>
-<span class='badge badge-danger'>05.10.2025 3:07:31 pm</span>
-<span class='badge badge-default'>00:00:18:001</span>
+<span class='badge badge-success'>05.12.2025 9:14:35 am</span>
+<span class='badge badge-danger'>05.12.2025 9:14:51 am</span>
+<span class='badge badge-default'>00:00:16:508</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -173,7 +173,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:07:31 pm</td>
+        <td>9:14:51 am</td>
         <td>
           Test Passed
         </td>
@@ -190,7 +190,7 @@
           <div class="test-detail">
             <p class="name">ProductErrorValidation</p>
             <p class="text-sm">
-              <span>3:07:18 pm</span> / <span>00:00:15:740</span>
+              <span>9:14:39 am</span> / <span>00:00:14:363</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -199,9 +199,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">ProductErrorValidation</h5>
-<span class='badge badge-success'>05.10.2025 3:07:18 pm</span>
-<span class='badge badge-danger'>05.10.2025 3:07:34 pm</span>
-<span class='badge badge-default'>00:00:15:740</span>
+<span class='badge badge-success'>05.12.2025 9:14:39 am</span>
+<span class='badge badge-danger'>05.12.2025 9:14:54 am</span>
+<span class='badge badge-default'>00:00:14:363</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -214,7 +214,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:07:34 pm</td>
+        <td>9:14:54 am</td>
         <td>
           Test Passed
         </td>
@@ -231,7 +231,7 @@
           <div class="test-detail">
             <p class="name">SubmitOrder</p>
             <p class="text-sm">
-              <span>3:07:37 pm</span> / <span>00:00:04:975</span>
+              <span>9:14:55 am</span> / <span>00:00:15:205</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -240,9 +240,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">SubmitOrder</h5>
-<span class='badge badge-success'>05.10.2025 3:07:37 pm</span>
-<span class='badge badge-danger'>05.10.2025 3:07:42 pm</span>
-<span class='badge badge-default'>00:00:04:975</span>
+<span class='badge badge-success'>05.12.2025 9:14:55 am</span>
+<span class='badge badge-danger'>05.12.2025 9:15:11 am</span>
+<span class='badge badge-default'>00:00:15:205</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=5</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -255,7 +255,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:07:42 pm</td>
+        <td>9:15:11 am</td>
         <td>
           Test Passed
         </td>
@@ -272,7 +272,7 @@
           <div class="test-detail">
             <p class="name">orderHistoryTest</p>
             <p class="text-sm">
-              <span>3:07:44 pm</span> / <span>00:00:04:807</span>
+              <span>9:15:14 am</span> / <span>00:00:00:937</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -281,9 +281,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">orderHistoryTest</h5>
-<span class='badge badge-success'>05.10.2025 3:07:44 pm</span>
-<span class='badge badge-danger'>05.10.2025 3:07:49 pm</span>
-<span class='badge badge-default'>00:00:04:807</span>
+<span class='badge badge-success'>05.12.2025 9:15:14 am</span>
+<span class='badge badge-danger'>05.12.2025 9:15:15 am</span>
+<span class='badge badge-default'>00:00:00:937</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=6</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -296,7 +296,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:07:49 pm</td>
+        <td>9:15:15 am</td>
         <td>
           Test Passed
         </td>
@@ -320,13 +320,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>May 10, 2025 03:06:59 pm</h3>
+<h3>May 12, 2025 09:14:24 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>May 10, 2025 03:07:50 pm</h3>
+<h3>May 12, 2025 09:15:16 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -396,7 +396,7 @@
 </div></div>
 <script>
 var timeline = {
-"D:\Switch@2025\Eclipse-WS\Format_WS\SeleniumFrameworkDesign\reports\index.html":0.001,"LoginErrorMessage":1.185,"SubmitOrder":18.001,"ProductErrorValidation":15.74,"SubmitOrder":4.975,"orderHistoryTest":4.807
+"D:\Switch@2025\Eclipse-WS\Format_WS\CICD\SeleniumFrameworkDesign\reports\index.html":0,"LoginErrorMessage":0.808,"SubmitOrder":16.508,"ProductErrorValidation":14.363,"SubmitOrder":15.205,"orderHistoryTest":0.937
 };
 </script>
 <div class="row">
