--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>D:\Switch@2025\Eclipse-WS\Format_WS\SeleniumFrameworkDesign\testsuite\testng.xml</span>
+                    <span>D:\Switch@2025\Eclipse-WS\Format_WS\CICD\SeleniumFrameworkDesign\testsuite\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -113,12 +113,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="rahulshettyacademy.Tests.StandAloneTesting" class="method navigator-link" hash-for-method="SubmitOrder({password=Testing@2802, email=leyvingsuvam7488@gmail.com, productName=ZARA COAT 3})">SubmitOrder({password=Testing@2802, email=leyvingsuvam7488@gmail.com, productName=ZARA COAT 3})</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="rahulshettyacademy.Tests.StandAloneTesting" class="method navigator-link" hash-for-method="SubmitOrder({password=Biswa@2022, email=biswa.relevel.classes@gmail.com, productName=ADIDAS ORIGINAL})">SubmitOrder({password=Biswa@2022, email=biswa.relevel.classes@gmail.com, productName=ADIDAS ORIGINAL})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="rahulshettyacademy.Tests.StandAloneTesting" class="method navigator-link" hash-for-method="SubmitOrder({password=Biswa@2022, email=biswa.relevel.classes@gmail.com, productName=ADIDAS ORIGINAL})">SubmitOrder({password=Biswa@2022, email=biswa.relevel.classes@gmail.com, productName=ADIDAS ORIGINAL})</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="rahulshettyacademy.Tests.StandAloneTesting" class="method navigator-link" hash-for-method="SubmitOrder({password=Testing@2802, email=leyvingsuvam7488@gmail.com, productName=ZARA COAT 3})">SubmitOrder({password=Testing@2802, email=leyvingsuvam7488@gmail.com, productName=ZARA COAT 3})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -146,18 +146,18 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="SubmitOrder({password=Testing@2802, email=leyvingsuvam7488@gmail.com, productName=ZARA COAT 3})">
-                  </a> <!-- SubmitOrder({password=Testing@2802, email=leyvingsuvam7488@gmail.com, productName=ZARA COAT 3}) -->
-                  <span class="method-name">SubmitOrder</span>
-                  <span class="parameters">({password=Testing@2802, email=leyvingsuvam7488@gmail.com, productName=ZARA COAT 3})</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="SubmitOrder({password=Biswa@2022, email=biswa.relevel.classes@gmail.com, productName=ADIDAS ORIGINAL})">
                   </a> <!-- SubmitOrder({password=Biswa@2022, email=biswa.relevel.classes@gmail.com, productName=ADIDAS ORIGINAL}) -->
                   <span class="method-name">SubmitOrder</span>
                   <span class="parameters">({password=Biswa@2022, email=biswa.relevel.classes@gmail.com, productName=ADIDAS ORIGINAL})</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="SubmitOrder({password=Testing@2802, email=leyvingsuvam7488@gmail.com, productName=ZARA COAT 3})">
+                  </a> <!-- SubmitOrder({password=Testing@2802, email=leyvingsuvam7488@gmail.com, productName=ZARA COAT 3}) -->
+                  <span class="method-name">SubmitOrder</span>
+                  <span class="parameters">({password=Testing@2802, email=leyvingsuvam7488@gmail.com, productName=ZARA COAT 3})</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -194,7 +194,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\Switch@2025\Eclipse-WS\Format_WS\SeleniumFrameworkDesign\testsuite\testng.xml</span>
+            <span class="header-content">D:\Switch@2025\Eclipse-WS\Format_WS\CICD\SeleniumFrameworkDesign\testsuite\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -274,28 +274,28 @@ data.addRows(5);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'SubmitOrder')
 data.setCell(0, 2, 'rahulshettyacademy.Tests.StandAloneTesting')
-data.setCell(0, 3, 15158);
+data.setCell(0, 3, 16514);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'SubmitOrder')
 data.setCell(1, 2, 'rahulshettyacademy.Tests.StandAloneTesting')
-data.setCell(1, 3, 14788);
+data.setCell(1, 3, 15206);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'ProductErrorValidation')
 data.setCell(2, 2, 'rahulshettyacademy.Tests.ErrorValidations')
-data.setCell(2, 3, 14721);
+data.setCell(2, 3, 14362);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'orderHistoryTest')
 data.setCell(3, 2, 'rahulshettyacademy.Tests.StandAloneTesting')
-data.setCell(3, 3, 876);
+data.setCell(3, 3, 939);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'LoginErrorMessage')
 data.setCell(4, 2, 'rahulshettyacademy.Tests.ErrorValidations')
-data.setCell(4, 3, 694);
+data.setCell(4, 3, 824);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 41 seconds</span>
+              <span class="suite-total-time">Total running time: 49 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -331,71 +331,77 @@ return data;
               <div class="chronological-class-name">rahulshettyacademy.Tests.StandAloneTesting</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">lunchAplication</span>
-                <span class="method-start">417 ms</span>
+                <span class="method-start">434 ms</span>
               </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">SubmitOrder({password=Testing@2802, email=leyvingsuvam7488@gmail.com, productName=ZARA COAT 3})</span>
-                <span class="method-start">4389 ms</span>
-              </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">rahulshettyacademy.Tests.ErrorValidations</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">LoginErrorMessage</span>
-                <span class="method-start">5076 ms</span>
+                <span class="method-start">6355 ms</span>
               </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">rahulshettyacademy.Tests.StandAloneTesting</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">SubmitOrder({password=Testing@2802, email=leyvingsuvam7488@gmail.com, productName=ZARA COAT 3})</span>
+                <span class="method-start">7002 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">rahulshettyacademy.Tests.ErrorValidations</div> <!-- chronological-class-name -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">5779 ms</span>
+                <span class="method-start">7193 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">lunchAplication</span>
-                <span class="method-start">5994 ms</span>
+                <span class="method-start">7713 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">ProductErrorValidation</span>
-                <span class="method-start">7262 ms</span>
+                <span class="method-start">11352 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">rahulshettyacademy.Tests.StandAloneTesting</div> <!-- chronological-class-name -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">19547 ms</span>
+                <span class="method-start">23518 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">lunchAplication</span>
-                <span class="method-start">19887 ms</span>
+                <span class="method-start">23824 ms</span>
               </div> <!-- configuration-method before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">rahulshettyacademy.Tests.ErrorValidations</div> <!-- chronological-class-name -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">21985 ms</span>
+                <span class="method-start">25719 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">rahulshettyacademy.Tests.StandAloneTesting</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">SubmitOrder({password=Biswa@2022, email=biswa.relevel.classes@gmail.com, productName=ADIDAS ORIGINAL})</span>
-                <span class="method-start">23130 ms</span>
+                <span class="method-start">27499 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">37918 ms</span>
+                <span class="method-start">42708 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">lunchAplication</span>
-                <span class="method-start">38180 ms</span>
+                <span class="method-start">42998 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">orderHistoryTest</span>
-                <span class="method-start">40051 ms</span>
+                <span class="method-start">46672 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">40927 ms</span>
+                <span class="method-start">47613 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
